ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration9/input.ts.stderr
error: Type parameters cannot appear on a constructor declaration
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration9/input.ts:2:15
  |
2 |   constructor<T>() { }
  |               ^

